src/objects/Decision_Log__c.object
<CustomObject>
    <description>This object is to log decisions made by government leads, product owners, and/or any government authority.</description>
    <fields>
        <fullName>Epic_Impacted__c</fullName>
        <inlineHelpText>Lookup the Epic this decision impacts.</inlineHelpText>
        <label>Epic Impacted</label>
        <referenceTo>agf__ADM_Epic__c</referenceTo>
        <relationshipLabel>Decision Logs</relationshipLabel>
        <relationshipName>Decisions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>Justification for the Decision</description>
        <inlineHelpText>Enter the Justification for the Decision</inlineHelpText>
        <label>Justification</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of the decision</description>
        <inlineHelpText>Enter a brief subject describing the decision.</inlineHelpText>
        <label>Subject</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>The Summary of the decision in consideration</description>
        <inlineHelpText>Enter the Summary of the decision in consideration</inlineHelpText>
        <label>Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Decision Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Decision Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Decision Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>